tests/snapshots/options__opt_null_delimiter_nth@002.snap
---
source: tests/options.rs
description: "input: bytes b\"a\\0b\\0c\"\noptions: --delimiter \\x00 --nth 2\nafter:\n  @char 'c'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> c                                                                             "
cursor: (24, 4)
