tests/snapshots/options__opt_null_delimiter_nth@003.snap
---
source: tests/options.rs
description: "input: bytes b\"a\\0b\\0c\"\noptions: --delimiter \\x00 --nth 2\nafter:\n  @key Backspace\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> abc                                                                           "
"  1/1                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
