tests/snapshots/options__opt_pre_select_file.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: -m --pre-select-file <file with b,c>"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" >c                                                                             "
" >b                                                                             "
"> a                                                                             "
"  3/3 [2]                                                                    0/0"
">                                                                               "
cursor: (24, 3)
