tests/snapshots/options__opt_pre_select_pat.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" >c                                                                             "
" >b                                                                             "
"> a                                                                             "
"  3/3 [2]                                                                    0/0"
">                                                                               "
cursor: (2, 23)
