tests/snapshots/options__opt_pre_select_pat@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: -m --pre-select-pat [b|c]"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" >c                                                                             "
" >b                                                                             "
"> a                                                                             "
"  3/3 [2]                                                                    0/0"
">                                                                               "
cursor: (24, 3)
