tests/snapshots/options__opt_read0@001.snap
---
source: tests/options.rs
description: "input: bytes b\"a\\0b\\0c\"\noptions: --read0"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
