tests/snapshots/options__opt_replstr-2.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                        │foo {} a                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> a                                     │                                       "
"  1/3                                0/0│                                       "
"> a                                     │                                       "
cursor: (24, 4)
